--- a/stickynotes/templates/stickynotes/index.html
+++ b/stickynotes/templates/stickynotes/index.html
@@ -25,6 +25,7 @@
                     <div class="d-flex">
                         <a href="{% url 'stickynote' pk=stickynote.pk %}" class="card-link">view</a>
                         <a href="{% url 'delete_stickynote' pk=stickynote.pk %}" class="card-link text-danger">delete</a>
+                        <a href="{% url 'update_stickynote' pk=stickynote.pk %}" class="card-link text-black">update</a>
                     </div>
                 </td>
             </tr>
